--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
-  },
-  "name": "foodapp",
-  "description": "A clone of food ordering app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "devDependencies": {
-    "parcel": "^2.8.3",
-    "process": "^0.11.10"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/natasha-pereira/FoodApp.git"
-  },
-  "author": "Natasha P",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/natasha-pereira/FoodApp/issues"
-  },
-  "homepage": "https://github.com/natasha-pereira/FoodApp#readme"
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.11.0"
+	},
+	"name": "foodapp",
+	"description": "A clone of food ordering app",
+	"version": "1.0.0",
+	"main": "index.js",
+	"devDependencies": {
+		"parcel": "^2.8.3",
+		"process": "^0.11.10"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "parcel index.html"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/natasha-pereira/FoodApp.git"
+	},
+	"author": "Natasha P",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/natasha-pereira/FoodApp/issues"
+	},
+	"homepage": "https://github.com/natasha-pereira/FoodApp#readme"
 }
