--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	"main": "index.js",
 	"devDependencies": {
 		"parcel": "^2.8.3",
-		"process": "^0.11.10"
+		"postcss": "^8.4.24",
+		"process": "^0.11.10",
+		"tailwindcss": "^3.3.2"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
