--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "parcel index.html"
+		"start": "parcel index.html",
+		"build": "parcel build index.html"
 	},
 	"repository": {
 		"type": "git",
